@@ -26,7 +26,7 @@
 	"tacos_purged_log": "{{fromuser}} purged all tacos from {{touser}} for {{reason}}",
 	"tacos_log_action_received": "received",
 	"tacos_log_action_lost": "lost",
-	"tacos_log_message:": "{{touser}} has {{action}} {{positive_count}} {{taco_word}} from {{fromuser}} for {{reason}}, giving them {{total_tacos}} 🌮.",
+	"tacos_log_message": "{{touser}} has {{action}} {{positive_count}} {{taco_word}} from {{fromuser}} for {{reason}}, giving them {{total_tacos}} 🌮.",
 	"ask_name_of_channel": "Enter the name of the channel",
 	"unknown_channel": "{{user}}, The channel id ({{channel_id}}) is not a valid channel.",
 	"selected_channel_message": "{{user}}, You have selected channel '{{channel}}'.",
@@ -42,7 +42,7 @@
 	"taco_give_title": "Give Tacos",
 	"taco_gift_limit_exceeded": "{{user}, You can only gift between 1 and {{remaining}} {{taco_word}}.",
 	"taco_gift_maximum": "You have reached the maximum amount of gifts you can give. You can only give {{max} {{taco_word}} per 24 hours.",
-	"taco_gift_success": "{{user}}, You gave {touser} {amount} {taco_word} 🌮.\n\n{{reason}}",
+	"taco_gift_success": "{{user}}, You gave {{touser}} {{amount}} {{taco_word}} 🌮.\n\n{{reason}}",
 	"taco_count_title": "Taco Count",
 	"taco_count_message": "{{user}}, You have {{count}} {{taco_word}}🌮.",
 	"taco_self_gift_message": "{{user}}, You can't gift yourself 🌮.",
